--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
                   xmlns:app="http://schemas.android.com/apk/res-auto"
                   android:gravity="center_horizontal"
                   android:orientation="vertical"
-                  tools:context=".LoginActivity">
+                  tools:context=".activities.LoginActivity">
 
     <ImageView
             android:id="@+id/img_logo"
@@ -14,14 +14,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/moneybox_logo"/>
+            android:src="@drawable/moneybox_logo"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"/>
 
     <android.support.design.widget.TextInputLayout
             android:id="@+id/til_email"
             app:layout_constraintTop_toBottomOf="@+id/img_logo"
             android:layout_marginTop="32dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
         <EditText
                 android:id="@+id/et_email"
@@ -38,7 +44,7 @@
             android:id="@+id/til_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/img_logo">
+            app:layout_constraintTop_toBottomOf="@+id/til_email">
 
         <EditText
                 android:id="@+id/et_password"
@@ -56,7 +62,7 @@
             android:id="@+id/til_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/til_email">
+            app:layout_constraintTop_toBottomOf="@+id/til_password">
 
         <EditText
                 android:id="@+id/et_name"
@@ -74,10 +80,15 @@
             style="@style/Widget.Button.Colored.Rounded"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:text="@string/action_sign_in"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/til_name"/>
 
     <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/animation"
@@ -85,6 +96,9 @@
             android:layout_height="wrap_content"
             android:scaleType="fitEnd"
             app:lottie_fileName="pig.json"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:lottie_loop="true"
+
+            app:layout_constraintBottom_toTopOf="@id/btn_sign_in"/>
 
 </android.support.constraint.ConstraintLayout>
