--- a/app/src/main/res/layout/plan_view.xml
+++ b/app/src/main/res/layout/plan_view.xml
@@ -8,34 +8,37 @@
         android:id="@+id/planLayoutBackground">
 
     <TextView
-            android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/planName"
+            android:padding="4dp"
+            android:layout_margin="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
             app:layout_constraintEnd_toStartOf="@+id/planDetailButton"/>
     <TextView
-            android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/planValue"
+            android:padding="4dp"
+            android:layout_margin="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/planName"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
             app:layout_constraintEnd_toStartOf="@+id/planDetailButton"/>
     <TextView
-            android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/planMoneybox"
+            android:padding="4dp"
+            android:layout_margin="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/planValue"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
             app:layout_constraintEnd_toStartOf="@+id/planDetailButton"/>
     <Button
             android:layout_width="40dp"
